--- a/deno.json
+++ b/deno.json
@@ -27,7 +27,7 @@
     "lineWidth": 80,
     "indentWidth": 2,
     "semiColons": true,
-    "singleQuote": true,
+    "singleQuote": false,
     "proseWrap": "preserve"
   },
   "lint": {
