--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,18 @@
 {
   "name": "@wyattjoh/media-server-mcp",
   "version": "0.1.0",
+  "license": "MIT",
   "exports": "./src/index.ts",
+  "publish": {
+    "include": [
+      "LICENSE",
+      "README.md",
+      "src/**/*.ts",
+      "deno.json",
+      ".env.example"
+    ],
+    "exclude": ["src/testdata/", "src/fixtures/", "tests/"]
+  },
   "tasks": {
     "dev": "deno run --allow-all --watch src/index.ts",
     "start": "deno run --allow-all src/index.ts",
