--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ RAPIDAPI_KEY=your-rapidapi-key-here
 # 1. Replace the URLs with your actual Radarr/Sonarr/IMDB instance URLs
 # 2. Replace the API keys with your actual API keys
 # 3. For IMDB functionality, get a RapidAPI key from https://rapidapi.com/
-# 4. IMDB_URL should point to your chosen IMDB API provider on RapidAPI
+# 4. IMDB_URL should point to your chosen IMDB API provider on RapidAPI (must include the full path with /api/imdb)
 # 5. At least one service (Radarr, Sonarr, OR IMDB) must be configured
 # 6. Radarr/Sonarr API keys can be found in Settings → General → Security in each application
 
