--- a/deno.json
+++ b/deno.json
@@ -19,7 +19,8 @@
     "check": "deno check **/*.ts",
     "fmt": "deno fmt",
     "lint": "deno lint",
-    "build": "deno compile --allow-read --allow-write --allow-env --allow-run --allow-net --output=media-server-mcp src/index.ts"
+    "build": "deno compile --allow-read --allow-write --allow-env --allow-run --allow-net --output=media-server-mcp src/index.ts",
+    "test": "deno test --allow-net"
   },
   "imports": {
     "@modelcontextprotocol/sdk": "npm:@modelcontextprotocol/sdk@^1.0.0",
