--- a/.env.example
+++ b/.env.example
@@ -13,13 +13,17 @@ SONARR_API_KEY=example-api-key
 IMDB_URL=https://imdb236.p.rapidapi.com/api/imdb
 RAPIDAPI_KEY=your-rapidapi-key-here
 
+# TMDB Configuration (optional - improves media discovery)
+TMDB_API_KEY=your-tmdb-api-key-here
+
 # Instructions:
 # 1. Replace the URLs with your actual Radarr/Sonarr/IMDB instance URLs
 # 2. Replace the API keys with your actual API keys
 # 3. For IMDB functionality, get a RapidAPI key from https://rapidapi.com/
 # 4. IMDB_URL should point to your chosen IMDB API provider on RapidAPI (must include the full path with /api/imdb)
-# 5. At least one service (Radarr, Sonarr, OR IMDB) must be configured
-# 6. Radarr/Sonarr API keys can be found in Settings → General → Security in each application
+# 5. For TMDB functionality, get an API key from https://developer.themoviedb.org/
+# 6. At least one service (Radarr, Sonarr, OR IMDB) must be configured
+# 7. Radarr/Sonarr API keys can be found in Settings → General → Security in each application
 
 # Example with different URLs:
 # RADARR_URL=https://radarr.example.com
