fix(ci): update workflow commands and prepare for JSR publication
Updates GitHub workflow to use direct deno commands instead of missing task aliases and removes local package imports from MCP server to prepare for JSR publication.

- Fix GitHub workflow commands (deno fmt/lint/check instead of task aliases)
- Remove local package imports from media-server-mcp deno.json
- Prepares packages for independent JSR publication

--- a/packages/media-server-mcp/deno.json
+++ b/packages/media-server-mcp/deno.json
@@ -19,10 +19,7 @@
   "imports": {
     "@modelcontextprotocol/sdk": "npm:@modelcontextprotocol/sdk@^1.0.0",
     "@std/dotenv": "jsr:@std/dotenv@^0.225.5",
-    "zod": "npm:zod@^3.22.0",
-    "@wyattjoh/radarr": "../radarr/mod.ts",
-    "@wyattjoh/sonarr": "../sonarr/mod.ts",
-    "@wyattjoh/tmdb": "../tmdb/mod.ts"
+    "zod": "npm:zod@^3.22.0"
   },
   "repository": {
     "type": "git",
