--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,13 +27,13 @@ jobs:
         run: deno task test
 
       - name: Check formatting
-        run: deno task fmt --check
+        run: deno fmt --check
 
       - name: Lint code
-        run: deno task lint
+        run: deno lint
 
       - name: Type check
-        run: deno task check
+        run: deno check
 
       - name: Publish to JSR
         run: deno publish
