feat: add tool segmentation system with branch-based filtering
- Implement tool categorization with 6 logical branches (discovery-add, library-management, system-maintenance, download-management, metadata-enrichment, advanced-search)
- Add configurable tool profiles (default, minimal, curator, maintainer, power-user, full)
- Support environment variable configuration (TOOL_PROFILE, TOOL_BRANCHES, TOOL_EXCLUDE, TOOL_INCLUDE)
- Add JSON configuration file support via TOOL_CONFIG_PATH
- Default profile reduces tools from 69 to 18 essential discovery/add tools
- Maintain backward compatibility with TOOL_PROFILE=full for all tools
- Update tool registration functions to accept filter configuration
- Add comprehensive configuration examples and documentation

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,23 @@ SONARR_API_KEY=example-api-key
 # TMDB Configuration (optional - improves media discovery)
 TMDB_API_KEY=your-tmdb-api-key-here
 
+# Tool Configuration (optional - defaults to "default" profile with discovery-add tools)
+# Profile options: default, minimal, curator, maintainer, power-user, full
+TOOL_PROFILE=default
+
+# Additional tool branches to enable (comma-separated)
+# Branches: library-management, system-maintenance, download-management, metadata-enrichment, advanced-search
+# TOOL_BRANCHES=library-management,download-management
+
+# Exclude specific tools (comma-separated)
+# TOOL_EXCLUDE=radarr_delete_movie,sonarr_delete_series
+
+# Include specific tools (comma-separated) - overrides profile/branch settings
+# TOOL_INCLUDE=radarr_get_health,sonarr_get_health
+
+# Path to JSON configuration file for advanced tool configuration
+# TOOL_CONFIG_PATH=./tools.config.json
+
 # Instructions:
 # 1. Replace the URLs with your actual Radarr/Sonarr/TMDB instance URLs
 # 2. Replace the API keys with your actual API keys
