feat(security): add Bearer token authentication for SSE transport
- Add MCP_AUTH_TOKEN environment variable requirement for SSE mode
- Implement Bearer token validation on all SSE endpoints except /health
- Add proper CORS headers including Authorization support
- Return 401 Unauthorized for invalid/missing tokens
- Update documentation with authentication setup instructions
- Add comprehensive authentication tests
- Maintain backward compatibility with stdio mode (no auth required)
- Add CLI support with --sse flag and port configuration

BREAKING CHANGE: SSE mode now requires MCP_AUTH_TOKEN environment variable

--- a/packages/media-server-mcp/deno.json
+++ b/packages/media-server-mcp/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@wyattjoh/media-server-mcp",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "license": "MIT",
   "exports": "./src/index.ts",
   "publish": {
@@ -19,7 +19,8 @@
   "imports": {
     "@modelcontextprotocol/sdk": "npm:@modelcontextprotocol/sdk@^1.0.0",
     "@std/dotenv": "jsr:@std/dotenv@^0.225.5",
-    "zod": "npm:zod@^3.22.0"
+    "zod": "npm:zod@^3.22.0",
+    "@cliffy/command": "jsr:@cliffy/command@^1.0.0-rc.8"
   },
   "repository": {
     "type": "git",
