--- a/deno.json
+++ b/deno.json
@@ -7,7 +7,9 @@
   ],
   "tasks": {
     "dev": "deno run --allow-all --watch packages/media-server-mcp/src/index.ts",
+    "dev:sse": "deno run --allow-all --watch packages/media-server-mcp/src/index.ts --sse",
     "start": "deno run --allow-all packages/media-server-mcp/src/index.ts",
+    "start:sse": "deno run --allow-all packages/media-server-mcp/src/index.ts --sse",
     "build": "deno compile --allow-read --allow-write --allow-env --allow-run --allow-net --output=media-server-mcp packages/media-server-mcp/src/index.ts",
     "test": "deno test --allow-net"
   },
