feat: add comprehensive logging system with LogTape integration
- Add structured logging with LogTape library for better observability
- Implement debug mode with --debug CLI flag for verbose output
- Add log categories for different components (connection, tools, transport)
- Improve SSE and STDIO transports with proper logging and cleanup
- Add graceful shutdown handling with signal listeners
- Update documentation with logging configuration and usage examples
- Configure stderr output for STDIO mode to avoid MCP protocol interference

Breaking changes:
- Build output path changed to packages/media-server-mcp/media-server-mcp

--- a/packages/media-server-mcp/deno.json
+++ b/packages/media-server-mcp/deno.json
@@ -20,7 +20,8 @@
     "@modelcontextprotocol/sdk": "npm:@modelcontextprotocol/sdk@^1.0.0",
     "@std/dotenv": "jsr:@std/dotenv@^0.225.5",
     "zod": "npm:zod@^3.22.0",
-    "@cliffy/command": "jsr:@cliffy/command@^1.0.0-rc.8"
+    "@cliffy/command": "jsr:@cliffy/command@^1.0.0-rc.8",
+    "@logtape/logtape": "jsr:@logtape/logtape@^1.0.4"
   },
   "repository": {
     "type": "git",
