feat: add structured logging to all client packages and update docs
- Add LogTape dependency to radarr, sonarr, and tmdb packages
- Implement structured HTTP request/response logging in all clients
- Add debug logging for connection tests with error context
- Update main package to configure client logger categories
- Add comprehensive SSE mode documentation with MCP_AUTH_TOKEN usage
- Include authentication examples and security guidelines
- Version bump client packages to 0.2.0

All logging respects --debug flag and only logs valuable information
(errors, edge conditions) as requested. Client packages use proper
LogTape patterns with template placeholders for structured data.

--- a/packages/tmdb/deno.json
+++ b/packages/tmdb/deno.json
@@ -1,8 +1,11 @@
 {
   "name": "@wyattjoh/tmdb",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "license": "MIT",
   "exports": "./mod.ts",
+  "imports": {
+    "@logtape/logtape": "jsr:@logtape/logtape@^1.0.4"
+  },
   "publish": {
     "include": ["LICENSE", "README.md", "mod.ts", "src/**/*.ts", "deno.json"]
   },
