--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,6 @@
 {
   "workspace": [
+    "packages/plex",
     "packages/radarr",
     "packages/sonarr",
     "packages/tmdb",
@@ -11,7 +12,10 @@
     "start": "deno run --allow-all packages/media-server-mcp/src/index.ts",
     "start:sse": "deno run --allow-all packages/media-server-mcp/src/index.ts --sse",
     "build": "deno compile --allow-read --allow-write --allow-env --allow-run --allow-net --output=packages/media-server-mcp/media-server-mcp packages/media-server-mcp/src/index.ts",
-    "test": "deno test --allow-net"
+    "test": "deno test --allow-net --allow-env",
+    "hooks:install": "deno run --allow-read=deno.json,.git/hooks/ --allow-write=.git/hooks/ jsr:@hongminhee/deno-task-hooks",
+    "hooks:pre-commit": "deno check && deno fmt --check && deno lint",
+    "hooks:pre-push": "deno publish --dry-run --allow-dirty"
   },
   "compilerOptions": {
     "strict": true,
